# libfreefare

./: configure.ac
libfreefare/: freefare.c  freefare.h  mifare_desfire_key.c
python/: MANIFEST.in  pyproject.toml  setup.py
python/pyfreefare/: freefare.pyx  libfreefare.pxd  libnfc.pxd  nfc.pxd  nfc.pyx
